# MLOps_RAG_Knowledge_Base

./: .gitignore  LICENSE  README.md  directory_temp.py  pyproject.toml
.github/workflows/: cicd.yaml
app/: config.py  main.py
app/services/: storage_service.py
vector_db/: chroma.sqlite3
