[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "app"
version = "0.0.1"
description = "RAG knowledge system with AWS"
authors = [    { name = "Sadurane", email = "samuel.duran.en@gmail.com" }]
license = { text = "MIT" }  # adjust if you have a LICENSE file
keywords = ["nlp", "Information", "RAG"]
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "flask==2.3.3",
    "werkzeug==2.3.7",
    "langchain==0.0.267",
    "openai==0.28.0",
    "python-dotenv==0.19.0",
    "boto3==1.28.0",
    "chromadb==0.4.0",
    "pypdf==3.9.0",
    "tiktoken==0.5.1",
    "unstructured==0.10.30",
]

[tool.setuptools]
package-dir = {"" = "app"}

[tool.setuptools.packages.find]
where = ["app"]